[tool.poetry]
name = "4-0"
version = "0.1.0"
description = ""
authors = ["Bato1401 <lego.1401@gmail.com>"]
readme = "README.md"
packages = [{include = "4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
